Made scrollbar permanent, fixed redirect functionality without using wheel options. Added document event listener to deal with any redirects on current page.

--- a/humans-proj/src/pages/home/Home.css
+++ b/humans-proj/src/pages/home/Home.css
@@ -8,11 +8,21 @@
     display: block;
     top: 0;
     left: 0;
-    min-height: 102%;
-    min-width: 100%;
     width: 100%;
     height: auto;
+    min-height: 105%;
     transition: transform .4s ease-in-out;
+}
+
+#home-background {
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    margin: 0;
+    padding: 0;
+    background-size: cover;
+    position: fixed;
 }
 
 #main-content {
